# clap-validator-plugins

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
cmake/: ClapPluginBundle.cmake  CopyToClapFolder.cmake
docs/: host-contract-violations.md
include/cvp/: violations.h
resources/: Info.plist.in
src/: entry.cpp  registry.cpp  registry.h
src/gui/: gui_model.h  native_view.h  native_view_mac.mm  native_view_win32.cpp  native_view_x11.cpp  transport_format.cpp  transport_format.h
src/plugins/audioports_zero/: audioports_zero.cpp  audioports_zero.h
src/plugins/common/: sine_engine.cpp  sine_engine.h
src/plugins/effect/: effect.cpp  effect.h
src/plugins/gui/: gui_plugin.cpp  gui_plugin.h
src/plugins/hostcheck/: hostcheck.cpp  hostcheck.h
src/plugins/multiout_fx/: multiout_fx.cpp  multiout_fx.h
src/plugins/multiout_gen/: multiout_gen.cpp  multiout_gen.h
src/plugins/notefx/: notefx.cpp  notefx.h
src/plugins/params_zoo/: params_zoo.cpp  params_zoo.h
src/plugins/preset/: preset_discovery.cpp  preset_discovery.h  preset_plugin.cpp  preset_plugin.h  preset_shared.cpp  preset_shared.h
src/plugins/sidechain_synth/: sidechain_synth.cpp  sidechain_synth.h
src/plugins/slow/: slow.cpp  slow.h
src/plugins/surround/: surround.cpp  surround.h
src/plugins/synth/: synth.cpp  synth.h
src/wrapper/: contract.cpp  contract.h  earlylog.cpp  earlylog.h  hostinfo.cpp  logbuffer.cpp  logbuffer.h  param_queue.h  plugin.cpp  plugin.h  stream.cpp  stream.h  threadcheck.cpp  threadcheck.h
src/wrapper/ext/: audio_ports.cpp  audio_ports.h  audio_ports_config.cpp  audio_ports_config.h  configurable_audio_ports.cpp  configurable_audio_ports.h  (+24 more)
tests/: CMakeLists.txt
